<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/change_number_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:padding="@dimen/back_button_padding"
                android:src="@drawable/ic_arrow_back"
                android:tint="@color/textColor" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/change_number"
            android:textColor="@color/textColor"
            android:textSize="@dimen/heading_text" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="17dp"
            android:paddingEnd="17dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="78dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/what_is_your_phone_number"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/order_detail_adapter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="-2dp"
                    android:text="@string/please_confirm_your_country_code_and_enter_your_phone_number"
                    android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.7"
                    android:background="@drawable/d_bottom_et_gray_line"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/country_code"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/order_detail_adapter" />

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/et_country_code"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@null"
                        android:editable="false"
                        android:focusable="false"
                        android:fontFamily="@font/poppins"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:inputType="phone"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/text_color_gray"
                        android:textSize="@dimen/text_size"
                        android:textStyle="normal"
                        tools:ignore="RtlCompat" />


                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.7"
                    android:background="@drawable/d_bottom_et_gray_line"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/mobile_number"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/order_detail_adapter" />

                    <EditText
                        android:id="@+id/et_phoneno"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@null"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/enter_your_number"
                        android:includeFontPadding="false"
                        android:inputType="phone"
                        android:text=""
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/text_color_gray"
                        android:textSize="@dimen/text_size" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/register_no_continue"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/d_round_corner_red__bkg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/str_continue"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_text"
                    android:textStyle="normal" />


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</RelativeLayout>